# shift

shift-backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  requirements.txt
shift-backend/alembic/: env.py
shift-backend/alembic/versions/: 0001_create_users_table.py  0002_add_auth_tables_and_columns.py  0003_add_organizations_and_workspaces.py  0004_conglomerates_contacts.py  0005_workspace_projects.py  0006_project_source_system.py  0007_project_data_sources.py  0008_add_firebird_data_source.py  0009_org_competitors.py  0010_add_cep_to_establishments.py  0011_add_erp_code_to_establishments.py  0012_competitor_schema_catalogs.py  0013_rename_competitor_description_to_name.py  0014_erps_and_workspace_erp_id.py  0015_workspace_schema_catalogs.py  0016_project_competitor_id.py  0017_extraction_layer_tables.py  0018_workspace_players.py  0019_projects_player_id.py  0020_workflow_engine_tables.py  0021_database_node_foundation.py  0fa874e49474_add_competitor_products.py
shift-backend/app/: main.py
shift-backend/app/api/: deps.py
shift-backend/app/core/: config.py  security.py
shift-backend/app/db/: base.py  session.py
shift-backend/app/models/: __init__.py  competitor.py  competitor_schema_catalog.py  conglomerate.py  contact.py  data_source.py  database_node.py  erp.py  establishment.py  extraction_job.py  extraction_template.py  organization.py  organization_member.py  project.py  project_extraction.py  refresh_token.py  roles.py  user.py  workflow.py  workflow_execution.py  workspace.py  (+3 more)
shift-backend/docs/: database-erd.mmd
(+170 files in other folders)
